Полностью (почти) рабочие апи методы для клиента
