# src/main/java/edu/school21/shopapi/ClientValidator.java
@@ -1,0 +1,25 @@
+package edu.school21.shopapi;
+
+import edu.school21.openapi.model.ClientDto;
+import edu.school21.shopapi.error.ServiceException;
+import edu.school21.shopapi.repository.AddressRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
+
+@Component
+@RequiredArgsConstructor
+public class ClientValidator {
+    private final AddressRepository addressRepository;
+
+
+    public void validateClient(ClientDto clientDto) {
+        checkAddressExistence(clientDto);
+    }
+
+    public void checkAddressExistence(ClientDto product) {
+        if (addressRepository.findById(product.getAddress().getId()).isEmpty()){
+            throw new ServiceException("No address found");
+        }
+    }
+
+}
