# src/main/java/edu/school21/shopapi/controller/AddressController.java
@@ -1,0 +1,29 @@
+package edu.school21.shopapi.controller;
+
+import edu.school21.openapi.api.AddressApi;
+import edu.school21.openapi.model.AddressDto;
+import edu.school21.shopapi.service.AddressService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+import java.util.UUID;
+
+
+@RequiredArgsConstructor
+@RestController
+public class AddressController implements AddressApi {
+
+    private final AddressService addressService;
+
+
+    @Override
+    public UUID createAddress(AddressDto addressDto) {
+        return addressService.save(addressDto).getId();
+    }
+
+    @Override
+    public List<AddressDto> getAllAddresses() {
+        return List.of();
+    }
+}
