# src/main/java/edu/school21/shopapi/error/GlobalExceptionHandler.java
@@ -1,0 +1,19 @@
+package edu.school21.shopapi.error;
+
+import edu.school21.openapi.model.ApiErrorResponse;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+
+@RestControllerAdvice
+public class GlobalExceptionHandler {
+
+    @ExceptionHandler(ServiceException.class)
+    public ResponseEntity<ApiErrorResponse> handleServiceException(ServiceException ex) {
+        ApiErrorResponse errorResponse = new ApiErrorResponse();
+        errorResponse.setMessage(ex.getMessage());
+
+        return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
+    }
+}
